game-of-pods/IronGallery/iron-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: iron-db
  name: iron-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iron-db
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: iron-db
        db: mariadb
    spec:
      containers:
      - image: kodekloud/irondb:2.0
        name: irondb
        volumeMounts: 
        - mountPath: /var/lib/mysql
          name: db
      volumes:
      - name: db
        emptyDir: {}
